kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskmanagement
  labels:
    name: taskmanagement
    environment: production
